Added frontend GitHub Action and fixed OpenAPI doc
