# backend/internal/http/docs/swagger.json
@@ -15,7 +15,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Action"
                 ],
                 "summary": "Lists actions",
                 "parameters": [
@@ -86,7 +86,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Action"
                 ],
                 "summary": "Retrieve an action",
                 "responses": {
@@ -111,6 +111,169 @@
                 }
             }
         },
+        "/v1/auth": {
+            "post": {
+                "security": [
+                    {
+                        "Authentication": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Authenticates a user",
+                "parameters": [
+                    {
+                        "description": "Authentication request",
+                        "name": "default",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.AuthRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/clients": {
+            "get": {
+                "security": [
+                    {
+                        "Authentication": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "summary": "Lists clients",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "example": 1,
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 1000,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 100,
+                        "description": "page size",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "name:contains:something",
+                        "description": "filter on a field",
+                        "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "name:desc",
+                        "description": "sort field and order",
+                        "name": "sort",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Client"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Authentication": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "summary": "Creates a new client",
+                "parameters": [
+                    {
+                        "description": "Client creation request",
+                        "name": "default",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.ClientCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Client"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/policies": {
             "get": {
                 "security": [
@@ -122,7 +285,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Policy"
                 ],
                 "summary": "Lists policies",
                 "parameters": [
@@ -191,7 +354,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Policy"
                 ],
                 "summary": "Creates a new policy",
                 "parameters": [
@@ -238,7 +401,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Policy"
                 ],
                 "summary": "Deletes a policy",
                 "responses": {
@@ -272,7 +435,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Policy"
                 ],
                 "summary": "Updates a policy",
                 "parameters": [
@@ -319,7 +482,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Principal"
                 ],
                 "summary": "Lists principals",
                 "parameters": [
@@ -388,7 +551,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Principal"
                 ],
                 "summary": "Creates a new principal",
                 "parameters": [
@@ -435,7 +598,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Principal"
                 ],
                 "summary": "Deletes a principal",
                 "responses": {
@@ -469,7 +632,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Principal"
                 ],
                 "summary": "Updates a principal",
                 "parameters": [
@@ -516,7 +679,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Resource"
                 ],
                 "summary": "Lists resources",
                 "parameters": [
@@ -585,7 +748,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Resource"
                 ],
                 "summary": "Creates a new resource",
                 "parameters": [
@@ -632,7 +795,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Resource"
                 ],
                 "summary": "Deletes a resource",
                 "responses": {
@@ -668,7 +831,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Role"
                 ],
                 "summary": "Lists roles",
                 "parameters": [
@@ -737,7 +900,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Role"
                 ],
                 "summary": "Creates a new role",
                 "parameters": [
@@ -784,7 +947,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Role"
                 ],
                 "summary": "Deletes a role",
                 "responses": {
@@ -818,7 +981,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Role"
                 ],
                 "summary": "Updates a role",
                 "parameters": [
@@ -865,7 +1028,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authz"
+                    "Auth"
                 ],
                 "summary": "Retrieve a client token",
                 "parameters": [
@@ -903,6 +1066,36 @@
         }
     },
     "definitions": {
+        "handler.AuthRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "mypassword"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "john.doe"
+                }
+            }
+        },
+        "handler.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "token_type": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
         "handler.CheckQuery": {
             "type": "object",
             "required": [
@@ -951,6 +1144,18 @@
                     "items": {
                         "$ref": "#/definitions/handler.CheckQuery"
                     }
+                }
+            }
+        },
+        "handler.ClientCreateRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "my-client"
                 }
             }
         },
@@ -1148,9 +1353,6 @@
                 "id": {
                     "type": "string"
                 },
-                "is_locked": {
-                    "type": "boolean"
-                },
                 "updated_at": {
                     "type": "string"
                 }
@@ -1166,6 +1368,32 @@
                     "type": "string"
                 },
                 "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Client": {
+            "type": "object",
+            "properties": {
+                "client_id": {
+                    "type": "string"
+                },
+                "client_secret": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -1290,6 +1518,20 @@
                     }
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
