# backend/internal/http/routing.go
@@ -56,31 +56,31 @@ func (s *Server) setRoutes() {
 		actions.Get("/:identifier", s.authorized("authz.actions", "get", s.handlers.Get(handler.ActionGetKey))...)
 
 		policies := authenticated.Group("/policies")
-		policies.Post("", s.handlers.Get(handler.PolicyCreateKey))
-		policies.Get("", s.handlers.Get(handler.PolicyListKey))
-		policies.Get("/:identifier", s.handlers.Get(handler.PolicyGetKey))
-		policies.Delete("/:identifier", s.handlers.Get(handler.PolicyDeleteKey))
-		policies.Put("/:identifier", s.handlers.Get(handler.PolicyUpdateKey))
+		policies.Post("", s.authorized("authz.policies", "create", s.handlers.Get(handler.PolicyCreateKey))...)
+		policies.Get("", s.authorized("authz.policies", "list", s.handlers.Get(handler.PolicyListKey))...)
+		policies.Get("/:identifier", s.authorized("authz.policies", "get", s.handlers.Get(handler.PolicyGetKey))...)
+		policies.Delete("/:identifier", s.authorized("authz.policies", "delete", s.handlers.Get(handler.PolicyDeleteKey))...)
+		policies.Put("/:identifier", s.authorized("authz.policies", "update", s.handlers.Get(handler.PolicyUpdateKey))...)
 
 		resources := authenticated.Group("/resources")
-		resources.Post("", s.handlers.Get(handler.ResourceCreateKey))
-		resources.Get("", s.handlers.Get(handler.ResourceListKey))
-		resources.Get("/:identifier", s.handlers.Get(handler.ResourceGetKey))
-		resources.Delete("/:identifier", s.handlers.Get(handler.ResourceDeleteKey))
+		resources.Post("", s.authorized("authz.resources", "create", s.handlers.Get(handler.ResourceCreateKey))...)
+		resources.Get("", s.authorized("authz.resources", "list", s.handlers.Get(handler.ResourceListKey))...)
+		resources.Get("/:identifier", s.authorized("authz.resources", "get", s.handlers.Get(handler.ResourceGetKey))...)
+		resources.Delete("/:identifier", s.authorized("authz.resources", "delete", s.handlers.Get(handler.ResourceDeleteKey))...)
 
 		role := authenticated.Group("/roles")
-		role.Post("", s.handlers.Get(handler.RoleCreateKey))
-		role.Get("", s.handlers.Get(handler.RoleListKey))
-		role.Get("/:identifier", s.handlers.Get(handler.RoleGetKey))
-		role.Delete("/:identifier", s.handlers.Get(handler.RoleDeleteKey))
-		role.Put("/:identifier", s.handlers.Get(handler.RoleUpdateKey))
+		role.Post("", s.authorized("authz.roles", "create", s.handlers.Get(handler.RoleCreateKey))...)
+		role.Get("", s.authorized("authz.roles", "list", s.handlers.Get(handler.RoleListKey))...)
+		role.Get("/:identifier", s.authorized("authz.roles", "get", s.handlers.Get(handler.RoleGetKey))...)
+		role.Delete("/:identifier", s.authorized("authz.roles", "delete", s.handlers.Get(handler.RoleDeleteKey))...)
+		role.Put("/:identifier", s.authorized("authz.roles", "update", s.handlers.Get(handler.RoleUpdateKey))...)
 
 		principals := authenticated.Group("/principals")
-		principals.Post("", s.handlers.Get(handler.PrincipalCreateKey))
-		principals.Get("", s.handlers.Get(handler.PrincipalListKey))
-		principals.Get("/:identifier", s.handlers.Get(handler.PrincipalGetKey))
-		principals.Delete("/:identifier", s.handlers.Get(handler.PrincipalDeleteKey))
-		principals.Put("/:identifier", s.handlers.Get(handler.PrincipalUpdateKey))
+		principals.Post("", s.authorized("authz.principals", "create", s.handlers.Get(handler.PrincipalCreateKey))...)
+		principals.Get("", s.authorized("authz.principals", "list", s.handlers.Get(handler.PrincipalListKey))...)
+		principals.Get("/:identifier", s.authorized("authz.principals", "get", s.handlers.Get(handler.PrincipalGetKey))...)
+		principals.Delete("/:identifier", s.authorized("authz.principals", "delete", s.handlers.Get(handler.PrincipalDeleteKey))...)
+		principals.Put("/:identifier", s.authorized("authz.principals", "update", s.handlers.Get(handler.PrincipalUpdateKey))...)
 	}
 }
 
